Подправил эндпоинты
